--- a/style.css
+++ b/style.css
@@ -120,8 +120,32 @@ button {
     font-size: 16px;
     color: black;
     font-weight: 600;
+    position: relative;
+    z-index: 1;
+    transition: color 0.7s;
+    
+}
+button span {
+    width: 0%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: rgb(194, 123, 123);
+    z-index: -1;
+    transition: 0.7s;
+    border-radius: 40px;
 
 }
+button:hover span {
+    width: 100%;
+}
+
+button:hover {
+    color: rgb(243, 236, 240);
+
+}
+
 
 .register-link {
     font-size: 16px;
